# myRenderer

./: .gitignore  CMakeLists.txt  README.md  build.bat  vulkanRenderSample.sln
source/: CMakeLists.txt
source/Engine/Animation/: module.json
source/Engine/Animation/Private/: Animation.cpp  Skeleton.cpp
source/Engine/Animation/Public/: Animation.h  AnimationData.h  Bone.h  Skeleton.h
source/Engine/Asset/: module.json
source/Engine/Asset/Private/: Asset.cpp
source/Engine/Asset/Public/: Asset.h
source/Engine/Core/: module.json
source/Engine/Core/Private/: Window.cpp
source/Engine/Engine/: module.json
source/Engine/Engine/Private/: Engine.cpp  Window.cpp
source/Engine/Engine/Public/: Engine.h  Window.h
source/Engine/File/Private/: yjw_file_reader.cpp  yjw_file_system_module.cpp
source/Engine/File/Public/: yjw_file_define.h  yjw_file_reader.h  yjw_file_system_module.h
source/Engine/InternalShaderResource/: module.json
source/Engine/InternalShaderResource/Private/: yjw_internal_shader_resource.cpp
source/Engine/InternalShaderResource/Public/: yjw_internal_shader_resource.h  (+1 more)
source/Engine/Main/: module.json
source/Engine/Meta/: module.json
source/Engine/Model/: module.json
source/Engine/Module/: module.json
source/Engine/Oracle/: module.json
source/Engine/RHI/: module.json
source/Engine/Render/: module.json
source/GeneratePythonModule/: module.json
source/Tools/CppReflection/: module.json
source/Tools/ModelImporter/: module.json
source/UnitTest/Test_CppReflection/: module.json
source/UnitTest/Test_Pybind/: module.json
source/UnitTest/Test_Utils/: module.json
source/client/: CMakeLists.txt  main.cpp  yjw_global_delegate.h  yjw_module_interface.h
source/client/Application/: module.json
source/client/Base/: yjw_unicode_util.cpp
source/client/File/: module.json
source/client/Main/: module.json
source/client/Math/: module.json
source/client/Model/: module.json
source/client/Render/: module.json
source/client/RenderSystem/: yjw_light.cpp  yjw_light.h  yjw_mesh.cpp  yjw_mesh.h  yjw_model.cpp  yjw_model.h  yjw_pass.cpp  yjw_pass.h  yjw_pipeline.cpp  yjw_pipeline.h  yjw_render_camera.cpp  yjw_render_camera.h  yjw_render_system.cpp  yjw_render_system.h  yjw_resource.cpp  yjw_resource.h  yjw_scene.cpp  yjw_scene.h
source/client/Scene/: module.json
source/client/Utils/: module.json
source/client/WindowManager/: yjw_windows_manager.cpp  yjw_windows_manager.h
source/client/delegate/: yjw_delegate.h
source/generate1/: projectInfo.h
source/project/: projectInfo.h.in
source/rhi/: CMakeLists.txt
source/rhi/common/: yjw_rhi_resource_allocator.h
source/rhi/new_rhi/: yjw_rhi.cpp  yjw_rhi.h  yjw_rhi_attachment_set.cpp  yjw_rhi_attachment_set.h  yjw_rhi_command.h  yjw_rhi_creation.h  yjw_rhi_define.h  yjw_rhi_descriptor.h  yjw_rhi_descriptor_binding.cpp  yjw_rhi_descriptor_binding.h  yjw_rhi_header.h  yjw_rhi_object.h  yjw_rhi_pso.cpp  yjw_rhi_pso.h  yjw_rhi_resource.h  yjw_rhi_resource_binding.h  yjw_rhi_shader.h
source/rhi/rhi/: yjw_rhi_common.cpp  yjw_rhi_context.cpp  yjw_rhi_context.h  yjw_rhi_define.h  yjw_rhi_descriptr_set.cpp  yjw_rhi_descriptr_set.h  yjw_rhi_device.cpp  yjw_rhi_device.h  yjw_rhi_draw_template.cpp  yjw_rhi_draw_template.h  yjw_rhi_executor.cpp  yjw_rhi_executor.h  yjw_rhi_header.h  yjw_rhi_instance.cpp  yjw_rhi_instance.h  yjw_rhi_interface.cpp  yjw_rhi_interface.h  yjw_rhi_layer.h  yjw_rhi_object.cpp  yjw_rhi_object.h  yjw_rhi_pipeline.cpp  yjw_rhi_pipeline.h  yjw_rhi_pipeline_state.h  yjw_rhi_render_pass.h  yjw_rhi_resource.cpp  yjw_rhi_resource.h  yjw_rhi_resource_binding.h  yjw_rhi_resource_view.cpp  yjw_rhi_resource_view.h  yjw_rhi_shader.cpp  yjw_rhi_shader.h  yjw_rhi_swap_chain.h
source/rhi/rpi/: yjw_rpi.cpp  yjw_rpi.h  yjw_rpi_define.h  yjw_rpi_drawer.cpp  yjw_rpi_drawer.h  yjw_rpi_header.h  yjw_rpi_pipeline.cpp  yjw_rpi_pipeline.h  yjw_rpi_resource.cpp  yjw_rpi_resource.h  yjw_rpi_resource_binding.cpp  yjw_rpi_resource_binding.h  yjw_rpi_resource_set.cpp  yjw_rpi_resource_set.h  yjw_rpi_state.cpp  yjw_rpi_state.h
source/rhi/shader/: yjw_dxc.cpp  yjw_dxc.h
source/rhi/shaderCompiler/: yjw_shader_compiler.cpp
source/rhi/vulkan/: yjw_vulkan.cpp  yjw_vulkan.h  yjw_vulkan_attachment_set.cpp  yjw_vulkan_attachment_set.h  yjw_vulkan_buffer.cpp  yjw_vulkan_buffer.h  yjw_vulkan_cmd.cpp  yjw_vulkan_command_list.cpp  yjw_vulkan_command_list.h  yjw_vulkan_command_queue.cpp  yjw_vulkan_command_queue.h  yjw_vulkan_common.cpp  yjw_vulkan_context.cpp  yjw_vulkan_context.h  yjw_vulkan_default_states.h  yjw_vulkan_define.h  yjw_vulkan_delegate.h  yjw_vulkan_descriptor_set.cpp  yjw_vulkan_descriptor_set.h  yjw_vulkan_device.cpp  yjw_vulkan_device.h  yjw_vulkan_drawItem.cpp  yjw_vulkan_functions.h  yjw_vulkan_global.cpp  yjw_vulkan_global.h  yjw_vulkan_image.cpp  yjw_vulkan_initializer.cpp  yjw_vulkan_instance.cpp  yjw_vulkan_instance.h  yjw_vulkan_pipeline.cpp  yjw_vulkan_pipeline.h  yjw_vulkan_pso.cpp  yjw_vulkan_pso.h  yjw_vulkan_rasterization_state_table.cpp  yjw_vulkan_render_pass.cpp  yjw_vulkan_render_pass.h  yjw_vulkan_resource_binding.cpp  yjw_vulkan_resource_binding.h  yjw_vulkan_resource_cast.h  yjw_vulkan_resource_ruler.cpp  (+13 more)
source/rhi/vulkan_new/: yjw_vulkan_attachments_set.cpp  yjw_vulkan_attachments_set.h  yjw_vulkan_command_buffer_manager.cpp  yjw_vulkan_command_buffer_manager.h  yjw_vulkan_descriptors_set.cpp  yjw_vulkan_descriptors_set.h  yjw_vulkan_draw_template_manager.cpp  yjw_vulkan_draw_template_manager.h  yjw_vulkan_god_objects_manager.cpp  yjw_vulkan_god_objects_manager.h  yjw_vulkan_pipeline.cpp  yjw_vulkan_pipeline.h  yjw_vulkan_pipeline_state.cpp  yjw_vulkan_pipeline_state.h  yjw_vulkan_resource_manager.cpp  yjw_vulkan_resource_manager.h  yjw_vulkan_resource_view_manager.cpp  yjw_vulkan_resource_view_manager.h  yjw_vulkan_rhi.cpp  yjw_vulkan_rhi.h  yjw_vulkan_shader_manager.cpp  yjw_vulkan_shader_manager.h  yjw_vulkan_shader_reflection.cpp  yjw_vulkan_shader_reflection.h  yjw_vulkan_type_conversion.cpp  yjw_vulkan_type_conversion.h
source/test/: CMakeLists.txt  main.cpp
(+682 files in other folders)
